--- a/cliente/templates/cliente/retiroCliente.html
+++ b/cliente/templates/cliente/retiroCliente.html
@@ -10,8 +10,8 @@
 
 <article class="content responsive-tables-page">
     <div class="title-block">
-        <h1 class="title"> Listar clientes </h1>
-        <p class="title-description">Clientes Agregados </p>
+        <h1 class="title">Clientes Retirados </h1>
+       
     </div>
     <section class="section">
         <div class="row">
@@ -32,7 +32,7 @@
                     <div class="card">
                         <div class="card-block">
                             <div class="card-title-block">
-                                <h3 class="title">Clientes</h3>
+                                <h3 class="title">Clientes Retirados</h3>
                             </div>
                             <section class="example">
                                 <div class="table-responsive">
@@ -55,6 +55,7 @@
                                                 <td><strong>Direccion</strong></td>                                  
                                                 <td><strong>Descripcion</strong></td>
                                                 <td><strong>Estado</strong></td>
+                                                <td><strong>Fecha Retiro</strong></td>
                                                 <td><strong>Opciones</strong></td>
                                              
                                             </tr>
@@ -82,6 +83,7 @@
                                                 {% elif fila.estado == 'abajo' %}
                                                 <td align="center" style="color: red;"><em class="fa fa-ban"></em></td>
                                                 {% endif %}
+                                                <td>{{fila.fecha_retirado}}</td>
 
                                                 <td>
                                         
