Api Clientes retirados

--- a/cliente/templates/cliente/agregarCliente.html
+++ b/cliente/templates/cliente/agregarCliente.html
@@ -211,13 +211,13 @@ function clienteCamposOcultos(esto)
 <!-----------------   FIN DE CAMPOS ---------------------------------->
 
 
-<!-----------------   CAMPO DE VEREDA ------------------>
+<!-----------------   CAMPO DE ESTADO ------------------>
 
 			<div class="form-group">
-				<label for="{{ form.vereda.name }}">
-					{{form.vereda.label}}
+				<label for="{{ form.estado.name }}">
+					{{form.estado.label}}
 				</label>
-					{{form.vereda}}
+					{{form.estado}}
 			</div>
 
 <!-----------------   FIN DE CAMPOS ---------------------------------->
@@ -235,13 +235,13 @@ function clienteCamposOcultos(esto)
 <!-----------------   FIN DE CAMPOS ---------------------------------->
 
 
-<!-----------------   CAMPO DE STATUS ------------------>
+<!-----------------   CAMPO DE EQUIPOS ------------------>
 
 			<div class="form-group" id="div_correo2">
-				<label for="{{ form.status.name }}">
-					{{form.status.label}}
+				<label for="{{ form.equipos.name }}">
+					{{form.equipos.label}}
 				</label>
-					{{form.status}}
+					{{form.equipos}}
 			</div>
 
 <!-----------------   FIN DE CAMPOS ---------------------------------->
@@ -262,10 +262,10 @@ function clienteCamposOcultos(esto)
 <!-----------------   CAMPO DE DESCRIPCION ------------------>
 
 <div class="form-group" id="div_telefono2">
-	<label for="{{ form.id_Pueblo.name }}">
-		{{form.id_Pueblo.label}}
+	<label for="{{ form.cap_megas.name }}">
+		{{form.cap_megas.label}}
 	</label>
-		{{form.id_Pueblo}}
+		{{form.cap_megas}}
 </div>
 
 <!-----------------   FIN DE CAMPOS ---------------------------------->
@@ -274,10 +274,10 @@ function clienteCamposOcultos(esto)
 <!-----------------   CAMPO DE DESCRIPCION ------------------>
 
 <div class="form-group" id="div_telefono2">
-	<label for="{{ form.id_Pueblo.name }}">
-		{{form.id_Estado.label}}
+	<label for="{{ form.fecha_retirado.name }}">
+		{{form.fecha_retirado.label}}
 	</label>
-		{{form.id_Estado}}
+		{{form.fecha_retirado}}
 </div>
 
 <!-----------------   FIN DE CAMPOS ---------------------------------->
