--- a/core/templates/comun/sidebar.html
+++ b/core/templates/comun/sidebar.html
@@ -35,13 +35,11 @@
                                 <!-- Sub-menu de Radios-->
                                 <li>
                                     <a href="">
-                                        <i class="fa fa-wifi"></i>Radios
+                                        <i class="fa fa-wifi"></i>Clientes Retirados
                                         <i class="fa arrow"></i>
                                     </a>
                                     <ul class="sidebar-nav">
-            <li><a href="#"><i class="fa fa-ellipsis-h"></i>Listar </a></li>
-            <li><a href="#"><i class="fa fa-plus"></i>Agregar </a></li>
-
+            <li><a href="/listarClientesRetirados"><i class="fa fa-ellipsis-h"></i>Listar Clientes Retirados </a></li>
                                     </ul>
                                 </li>
                                 <!-- Fin de sub-menu de Radios -->
