--- a/core/templates/comun/sidebar.html
+++ b/core/templates/comun/sidebar.html
@@ -35,7 +35,7 @@
                                 <!-- Sub-menu de Radios-->
                                 <li>
                                     <a href="">
-                                        <i class="fa fa-wifi"></i>Clientes Retirados
+                                        <i class="fa fa-user-times"></i>Clientes Retirados
                                         <i class="fa arrow"></i>
                                     </a>
                                     <ul class="sidebar-nav">
