--- a/core/templates/comun/estilos.html
+++ b/core/templates/comun/estilos.html
@@ -5,8 +5,10 @@
         <title>Conexxion Wifi</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="apple-touch-icon" href="apple-touch-icon.png">
+        
         <!-- Place favicon.ico in the root directory -->
+        <link rel="shortcut icon" type="image/x-icon" href="{% static 'assets/favicon/favicon.ico' %}">
+
         <link rel="stylesheet" href='{% static "css/vendor.css" %}'>
 
         <link rel="stylesheet" id="theme-style" href="{% static 'css/app-orange.css' %}">
