--- a/cliente/templates/factura/listarFacturas.html
+++ b/cliente/templates/factura/listarFacturas.html
@@ -62,11 +62,7 @@
 
                                                     <div class="dropdown-menu">
                                                         <a class="dropdown-item"
-                                                            href="/verFactura/{{ factura.id }}">Editar/Ver Factura</a>
-                                                        <div class="dropdown-divider"></div>
-                                                        <a class="dropdown-item"
-                                                            href="/generarFactura/{{ fila.id }}">Generar reporte
-                                                            (CSV)</a>
+                                                            href="/verFactura/{{ factura.id }}">Ver Factura</a>                                 
                                                     </div>
                                                     <!-- <div class="dropdown-divider"></div>
                                                     <a class="dropdown-item" href="/generarFacturaPDF/{{ fila.id}}">Generar reporte (PDF)</a>
