--- a/static/css/vendor.css
+++ b/static/css/vendor.css
@@ -9731,7 +9731,7 @@ pre code {
 
 @media (max-width: 575.98px) {
   .table-responsive-sm {
-    display: block;
+    display: flex;
     width: 100%;
     overflow-x: auto;
     -webkit-overflow-scrolling: touch;
@@ -9744,7 +9744,7 @@ pre code {
 
 @media (max-width: 767.98px) {
   .table-responsive-md {
-    display: block;
+    display: flex;
     width: 100%;
     overflow-x: auto;
     -webkit-overflow-scrolling: touch;
@@ -9757,9 +9757,9 @@ pre code {
 
 @media (max-width: 991.98px) {
   .table-responsive-lg {
-    display: block;
+    display: flex;
     width: 100%;
-    overflow-x: auto;
+    overflow-x: scroll;
     -webkit-overflow-scrolling: touch;
     -ms-overflow-style: -ms-autohiding-scrollbar;
   }
@@ -9770,9 +9770,9 @@ pre code {
 
 @media (max-width: 1199.98px) {
   .table-responsive-xl {
-    display: block;
+    display: flex;
     width: 100%;
-    overflow-x: auto;
+    overflow-x: scroll;
     -webkit-overflow-scrolling: touch;
     -ms-overflow-style: -ms-autohiding-scrollbar;
   }
@@ -9782,9 +9782,9 @@ pre code {
 }
 
 .table-responsive {
-  display: block;
+  display: flex;
   width: 100%;
-  overflow-x: auto;
+  overflow-x: scroll;
   -webkit-overflow-scrolling: touch;
   -ms-overflow-style: -ms-autohiding-scrollbar;
 }
