--- a/core/templates/comun/sidebar.html
+++ b/core/templates/comun/sidebar.html
@@ -32,7 +32,7 @@
                                 <!-- Fin de sub-menu de clientes -->
 
                                 
-                                <!-- Sub-menu de Radios-->
+                                <!-- Sub-menu de Clientes Retirados-->
                                 <li>
                                     <a href="">
                                         <i class="fa fa-user-times"></i>Clientes Retirados
@@ -42,7 +42,19 @@
             <li><a href="/listarClientesRetirados"><i class="fa fa-ellipsis-h"></i>Listar Clientes Retirados </a></li>
                                     </ul>
                                 </li>
-                                <!-- Fin de sub-menu de Radios -->
+                                <!-- Fin de sub-menu de Clientes Retirados -->
+                                
+                                <!-- Sub-menu de Clientes Retirados-->
+                                <li>
+                                    <a href="">
+                                        <i class="fa fa-times-circle-o"></i>Clientes Suspendidos
+                                        <i class="fa arrow"></i>
+                                    </a>
+                                    <ul class="sidebar-nav">
+            <li><a href="/listar_suspendidos"><i class="fa fa-times"></i>Listado Suspendidos </a></li>
+                                    </ul>
+                                </li>
+                                <!-- Fin de sub-menu de Clientes Retirados -->
                                 
                                 <!-- Sub-menu de usuarios -->
                                 <li>
